Added some logic to test the posting of messages to the Nedbank project.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -152,7 +152,7 @@
             </tr>
             <tr>
                 <td class="detail detail-header light-blue">Web:</td>
-                <td class="detail detail-content" nowrap>www.ikube.be/ikube (guest/guest)</td>
+                <td class="detail detail-content" nowrap>www.ikube.be/ikube/system/dash.html (guest/guest)</td>
             </tr>
         </table>
     </th>
@@ -188,13 +188,14 @@
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
         * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br>
         * Nothing live for the scanner of course ;)<br>
-        *  And nothing live for the search gui either<br><br>
+        * And nothing live for the search gui either<br><br>
 
         Source:<br>
         * https://github.com/michaelcouck/ikube<br>
         * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br>
         * https://github.com/michaelcouck/scanner<br>
-        * https://github.com/michaelcouck/ikube-client<br><br>
+        * https://github.com/michaelcouck/ikube-client<br>
+        * https://github.com/michaelcouck/i-discover<br><br>
 
         Ikube is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
         using statistical models and neural networks for analyses. Future ready for IoT when processing real-time analytics in
@@ -214,6 +215,9 @@
         The client gui is a search gui for the ikube server. Not finished, but could be interesting. Lots of work using Eclipse RCP,
         difficult and expensive but in the end worth it because it is quite attractive. Even programmers can create nice looking documents
         in Eclipse RCP, really.<br><br>
+
+        i-discover is a 10000/second/node real-time, grid based(distributed), linearly scalable, pluggable processing engine. Already
+        incorporated is a real time indexing application for banking payments data. My current sand box for R&D.
     </td>
     <td class="content">
         <table>
@@ -369,7 +373,7 @@
                 <td class="border-left"></td>
                 <td class="content">
                     One year of informatics, finally switched to mathematics as there was really nothing I could gain from
-                    doing these courses.
+                    doing these courses this late in the day.
                 </td>
             </tr>
         </table>
@@ -392,7 +396,8 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Upgrade the mathematics for machine learning and analytics career direction.
+                    Upgrade the mathematics for machine learning and analytics career direction. Machine learning
+                    not a niche market anymore but mainstream now.
                 </td>
             </tr>
         </table>
@@ -454,22 +459,22 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="company light-blue">Clear2Pay</td>
+                <td class="company light-blue">Clear2Pay/FIS</td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Technical design and architecture of requirements, coaching, code review and quality control. Monitoring
-                    the development team. Delivering custom software for banking payments software. Performance tweaking for the
-                    product. Third line support for issues.
+                    Interacting with the client. Technical design and architecture of requirements, coaching, code review and quality
+                    control. Monitoring the development team. Delivering custom software for banking payments software. Performance tweaking
+                    for the product. Third line support for issues.
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Jee, Bpel, WebSphere, Oracle, Jms, Linux, Gradle
+                    Jee, Bpel, WebSphere, Oracle, Jms, Linux, Gradle, SAML, JAAS
                 </td>
             </tr>
         </table>
@@ -672,6 +677,42 @@
                 <td class="bold-black" align="right">Neuroph:</td>
                 <td align="left" width="100%">
                     <div class="skill-hr" style="width: 40%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">MQ:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 30%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">WebSphere:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 25%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">WebLogic:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 10%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">Byte code:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 50%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">ASM:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 65%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">JAAS:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 65%;">&nbsp;</div>
                 </td>
             </tr>
         </table>
