Updated Serenity to java-8.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -180,44 +180,45 @@
 <tr>
     <td class="content" valign="top">
         I would like to be involved in a project with competent developers, in a pleasant environment,
-        ideally in a machine learning or artificial intelligence application with lots of good coffee.<br><br>
+        ideally in an analytics, machine learning or artificial intelligence application, with lots of good coffee.<br><br>
 
-        Below are my open source projects:<br><br>
+        The roles that I'm looking for are Technical Architect or Senior Java Developer with the mandate and 
+        responsabilities to lead the creation of a technical solution design or to lead a development team.<br><br>
+
+        My technical expertise lies in Java backends technologies (SE/EE), in-depth knowlegde of the Spring Framework, 
+        but also in front end technologies like Javascript and AngularJS. Note that I wrote the IKube frontend in AngularJS.<br><br>
+
+        My development and architectural skills are best judged by the applications and the source code I write.<br>
+        Below are my main open source projects:<br><br>
 
         Live:<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
         * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br>
-        * Nothing live for the scanner of course ;)<br>
-        * And nothing live for the search gui either<br><br>
 
         Source:<br>
         * https://github.com/michaelcouck/ikube<br>
         * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br>
-        * https://github.com/michaelcouck/scanner<br>
         * https://github.com/michaelcouck/ikube-client<br>
         * https://github.com/michaelcouck/i-discover<br><br>
 
-        Ikube is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
+        <b>Ikube</b> is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
         using statistical models and neural networks for analyses. Future ready for IoT when processing real-time analytics in
         extreme volumes becomes popular. Self organizing, auto network discovery, fully distributed and load balanced, models built
-        in parallel for larger models. And combined enterprise analytics/search out of the box.<br><br>
+        in parallel for larger<br><br><br>
 
-        Serenity is a code coverage plugin for Jenkins with dynamic byte code injection using ASM, including static analysis for
+        models. And combined enterprise analytics/search out of the box.<br><br>
+
+        <b>Serenity</b> is a code coverage plugin for Jenkins with dynamic byte code injection using ASM, including static analysis for
         the major code quality metrics, abstractness, efferent and afferent coupling, stability, complexity and distance from main.
         Integrated in the library is a production profiler. This will instrument only methods, and typically increases the cpu
         consumption by about 3%. Note that it is not recommended for profiling transactional methods, as these methods will already
         have been instrumented, and doing so again could have interesting side effects.<br><br>
 
-        Scanner is a network scanner, written in Scala(just for a laugh), that, well, scans a specific network range, and ports
-        of course. Can be run from the command line, and as a library to be used internally from Java/Scala or probably Groovy too
-        in fact.<br><br>
+        <b>The ikube client gui</b> is a search gui for the ikube server. It is however not a finished product, but it shows some of my Eclipse RCP work.
+        <br><br>
 
-        The client gui is a search gui for the ikube server. Not finished, but could be interesting. Lots of work using Eclipse RCP,
-        difficult and expensive but in the end worth it because it is quite attractive. Even programmers can create nice looking documents
-        in Eclipse RCP, really.<br><br>
-
-        i-discover is a 10000/second/node real-time, grid based(distributed), linearly scalable, pluggable processing engine. Already
-        incorporated is a real time indexing application for banking payments data. My current sand box for R&D.
+        <b>i-discover</b> is a 10000/second/node real-time, grid based (distributed), linearly scalable, pluggable processing engine. Already
+        incorporated is a real time indexing application for banking payments data.
     </td>
     <td class="content">
         <table>
@@ -232,14 +233,6 @@
             <tr>
                 <td class="characteristics-header">French:</td>
                 <td>Smatterings</td>
-            </tr>
-            <tr>
-                <td class="characteristics-header">Afrikaans:</td>
-                <td>Too long ago</td>
-            </tr>
-            <tr>
-                <td class="characteristics-header">Zulu:</td>
-                <td>Another life</td>
             </tr>
         </table>
     </td>
@@ -326,7 +319,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Java certification for general development, Rmi, Swing, etc.
+                    Java certification for general development, RMI, Swing, etc.
                 </td>
             </tr>
         </table>
@@ -349,7 +342,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Java certification for web development, Jsp, Expression language, etc.
+                    Java certification for web development, JSP, Expression language, etc.
                 </td>
             </tr>
         </table>
@@ -372,8 +365,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    One year of informatics, finally switched to mathematics as there was really nothing I could gain from
-                    doing these courses this late in the day.
+                    One year of informatics, finally switched to mathematics.
                 </td>
             </tr>
         </table>
@@ -396,8 +388,8 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Upgrade the mathematics for machine learning and analytics career direction. Machine learning
-                    not a niche market anymore but mainstream now.
+                    Upgrade the mathematics for machine learning and analytics career direction. I opted for machine learning
+                    since this is not a niche market anymore but a mainstream one.
                 </td>
             </tr>
         </table>
@@ -426,7 +418,7 @@
             </tr>
             <tr>
                 <td class="characteristics-header">Availability:</td>
-                <td>Drop me a mail</td>
+                <td>Send me a mail</td>
             </tr>
         </table>
     </td>
@@ -474,7 +466,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Jee, Bpel, WebSphere, Oracle, Jms, Linux, Gradle, SAML, JAAS
+                    Java EE, BPEL, WebSphere, Oracle, Jms, Linux, Gradle, SAML, JAAS
                 </td>
             </tr>
         </table>
@@ -715,6 +707,12 @@
                     <div class="skill-hr" style="width: 65%;">&nbsp;</div>
                 </td>
             </tr>
+            <tr>
+                <td class="bold-black" align="right">SAML:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 35%;">&nbsp;</div>
+                </td>
+            </tr>
         </table>
     </td>
 </tr>
@@ -740,14 +738,14 @@
                     <td></td>
                     <td class="border-left"></td>
                     <td class="content">
-                        General development on the logical ESB that simplifies the SOAP backends to Json for clients.
+                        General development on the logical ESB that simplifies the SOAP backends to JSON for clients.
                     </td>
                 </tr>
                 <tr>
                     <td></td>
                     <td class="border-left"></td>
                     <td class="technologies">
-                        Jee, Rest, Soap, Oracle, the usual suspects...
+                        Java EE, REST, SOAP, Oracle, ...
                     </td>
                 </tr>
             </table>
@@ -775,7 +773,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    I was involved in several projects, starting with a driver to feed two printing machines with
+                    I was involved in several projects, starting with a driver to feed two industrial printing machines with
                     address data, an invoicing backbone for the Post, SOA oriented. A customer portal for shopping
                     online and getting the goods delivered by Post, SOA oriented. And finally a human resources
                     planning application consisting of a fat client and server that integrates with other human
@@ -786,7 +784,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Java, Jee, Jdbc, Ejb 2.0, Jms, Jmx, Jaas, multi threading, Ivy, Ant, Oracle, Junit,
+                    Java, Java EE, JDBC, EJB 2.0, JMS, JMX, JAAS, multi threading, Ivy, Ant, Oracle, Junit,
                     Jenkins, Spring, Kerberos, SOA, Swing, JBoss Remoting
                 </td>
             </tr>
@@ -815,7 +813,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    This project, the Campaign Service, is a central repository for Golden Pages advertising
+                    This smaller project, the "Campaign Service" application, is a central repository for Golden Pages advertising
                     linked to FaceBook, Google Adwords et. al. The project consists of a data model coupled to a
                     front end, all wired with Spring, back end and MVC on the front. My responsibility is to develop
                     functionality using the technology stack from the project.
@@ -825,7 +823,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Spring, Spring Mvc, Spring Security, Jsp, Jpa, Jms, Postgres, Web Services
+                    Spring, Spring MVC, Spring Security, JSP, JPA, JMS, Postgres, Web Services
                 </td>
             </tr>
         </table>
@@ -863,7 +861,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="technologies">Java J2ee, Oracle, Oc4j, Ivy, Ant, Junit, Jpa, Toplink, Eclipselink</td>
+                <td class="technologies">Java J2EE, Oracle, Oc4j, Ivy, Ant, Junit, JPA, Toplink, Eclipselink</td>
             </tr>
         </table>
     </td>
@@ -938,7 +936,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="technologies">J2ee/Java, Maven, Spring, Oracle, Jmx, Ejb, Jms, SVN, Hl7.</td>
+                <td class="technologies">J2EE/Java, Maven, Spring, Oracle, Jmx, Ejb, Jms, SVN, Hl7.</td>
             </tr>
         </table>
     </td>
@@ -975,8 +973,8 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="technologies">Jee, Maven, Spring, AOP, SOA, H2 Database, Lucene, JPA, SVN, Ant, TagLib,
-                    Tiles, Spring Mvc, Oracle, Db2, Hazelcast
+                <td class="technologies">JEE, Maven, Spring, AOP, SOA, H2 Database, Lucene, JPA, SVN, Ant, TagLib,
+                    Tiles, Spring Mvc, Oracle, DB2, Hazelcast
                 </td>
             </tr>
         </table>
@@ -1011,8 +1009,7 @@
                     Technologies used are Java, J2EE, Spring, Swing and some ancillary technologies.
                     I first wired the legacy application with Spring to facilitate a test harness. The objective was
                     to introduce unit testing into existing code to improve productivity. This required a complete
-                    simulated server environment with Spring due to the tight coupling of the components due to the
-                    age of the code.
+                    simulated server environment with Spring due to the tight coupling of the components.
 
                     I participated in the development of other add-on functionality from existing projects namely
                     for introduction of data into the system. Along with this also general maintenance including
@@ -1023,7 +1020,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Jee, Spring, XML, SQL, Eclipse, Weblogic, Oracle, Toad, Clearcase, Windows, EJB, JMS, Swing
+                    Java EE, Spring, XML, SQL, Eclipse, Weblogic, Oracle, Toad, Clearcase, Windows, EJB, JMS, Swing
                 </td>
             </tr>
         </table>
@@ -1179,7 +1176,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Java/J2EE, Xml, SQL, Eclipse 3.2.2, JBoss 4, MySQL, CVS, EDesign,
+                    Java/J2EE, XML, SQL, Eclipse 3.2.2, JBoss 4, MySQL, CVS, EDesign,
                     Windows, Lucene, Hibernate, EJB, JMS, Swing, JPF, UML
                 </td>
             </tr>
