Updating the Twitter sentient handler for execution on the puppy server.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -11,7 +11,7 @@
         }
 
         .light-blue {
-            color: #aadddd;
+            color: #aaaaaa;
         }
 
         .name {
@@ -27,7 +27,7 @@
         }
 
         .content {
-            color: #a1a1a1;
+            color: #000000;
             font-size: 15px;
             text-align: left;
             vertical-align: top;
@@ -51,7 +51,7 @@
         }
 
         td.detail-content {
-            color: #d8d8d8;
+            color: #aaaaaa;
             text-align: left;
             font-size: 13px;
         }
@@ -132,33 +132,23 @@
 </head>
 <body>
 
-<img src="../images/055.jpg" width="400px;" height="600px;" style="border: 1px solid #000000; float: right;">
+<!--<img src="../images/055.jpg" width="400px;" height="600px;" style="border: 1px solid #000000; float: right;">-->
 
 <table width="100%" border="0">
 <tr>
-    <th align="left">
+    <th align="left" width="75%">
         <span class="name name-first">MICHAEL </span>
         <span class="name name-second">COUCK</span>
     </th>
-    <th rowspan="2">
-        <table>
-            <tr>
-                <td class="detail detail-header light-blue">Phone:</td>
-                <td class="detail detail-content">+32 (0)493 679 684</td>
-            </tr>
-            <tr>
-                <td class="detail detail-header light-blue">Email:</td>
-                <td class="detail detail-content">michael.couck@gmail.com</td>
-            </tr>
-            <tr>
-                <td class="detail detail-header light-blue">Web:</td>
-                <td class="detail detail-content" nowrap>www.ikube.be/ikube/system/dash.html (guest/guest)</td>
-            </tr>
-        </table>
+    <th align="left" rowspan="2" width="25%" class="content" style="font-size: 10px">
+        Phone: +32 (0) 493679684<br>
+        Email: michael.couck@gmail.com<br>
+        GitHub: https://github.com/michaelcouck<br>
+        Web: www.ikube.be/ikube/system/dash.html (guest/guest)
     </th>
 </tr>
 <tr>
-    <td class="title">Freelance Technical Architect/Senior Java Developer</td>
+    <td class="title">Freelance Technical Architect & Programmer</td>
 </tr>
 <tr>
     <td class="thick-hr" colspan="2"></td>
@@ -228,11 +218,15 @@
             </tr>
             <tr>
                 <td class="characteristics-header">Dutch:</td>
-                <td>Good</td>
+                <td>Fluent</td>
             </tr>
             <tr>
                 <td class="characteristics-header">French:</td>
-                <td>Smatterings</td>
+                <td>2%</td>
+            </tr>
+            <tr>
+                <td class="characteristics-header">Russian:</td>
+                <td>1%</td>
             </tr>
         </table>
     </td>
@@ -402,7 +396,7 @@
             </tr>
             <tr>
                 <td class="characteristics-header">DOB:</td>
-                <td>27/05/1971</td>
+                <td>27-05-1971</td>
             </tr>
             <tr>
                 <td class="characteristics-header">Nationality:</td>
@@ -418,7 +412,12 @@
             </tr>
             <tr>
                 <td class="characteristics-header">Availability:</td>
-                <td>Send me a mail</td>
+                <td>Negotiable</td>
+            </tr>
+            <tr>
+                <td class="characteristics-header" rowspan="2" colspan="2">
+                    <img src="../images/055.jpg" width="250px;" height="375px;" style="border: 1px solid #000000; float: right;">
+                </td>
             </tr>
         </table>
     </td>
