Updated the CV.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -132,7 +132,7 @@
 </head>
 <body>
 
-<!--<img src="../images/055.jpg" width="400px;" height="600px;" style="border: 1px solid #000000; float: right;">-->
+<!--<img src="../images/055.jpg" width="200px;" height="300px;" style="border: 1px solid #000000; float: right;">-->
 
 <table width="100%" border="0">
 <tr>
@@ -172,39 +172,41 @@
         I would like to be involved in a project with competent developers, in a pleasant environment,
         ideally in an analytics, machine learning or artificial intelligence application, with lots of good coffee.<br><br>
 
-        The roles that I'm looking for are Technical Architect or Senior Java Developer with the mandate and 
-        responsabilities to lead the creation of a technical solution design or to lead a development team.<br><br>
+        The roles that I'm looking for are technical architect with the mandate and
+        responsibilities to lead the creation of a technical solution design or to lead/consult/support a development team.<br><br>
 
-        My technical expertise lies in Java backends technologies (SE/EE), in-depth knowlegde of the Spring Framework, 
-        but also in front end technologies like Javascript and AngularJS. Note that I wrote the IKube frontend in AngularJS.<br><br>
+        My technical expertise lies in Java backends technologies (SE/EE), in-depth knowledge of the Spring Framework,
+        but also in front end technologies like Javascript and AngularJS. Note that I wrote the Ikube frontend in AngularJS.<br><br>
 
         My development and architectural skills are best judged by the applications and the source code I write.<br>
         Below are my main open source projects:<br><br>
 
         Live:<br>
+        * http://192.168.1.43:8081/backup-1.4-SNAPSHOT/login.html - (ask for login credentials)<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
-        * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br>
+        * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br><br>
 
         Source:<br>
-        * https://github.com/michaelcouck/ikube<br>
-        * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br>
-        * https://github.com/michaelcouck/ikube-client<br>
-        * https://github.com/michaelcouck/i-discover<br><br>
+        * https://github.com/michaelcouck/backup - network backup, gui still in development<br>
+        * https://github.com/michaelcouck/ikube - analytics & search<br>
+        * https://github.com/michaelcouck/serenity-plugin - code metrics/coverage<br>
+        * https://github.com/michaelcouck/ikube-client - jface client PoC<br>
+        * https://github.com/michaelcouck/i-discover - high volume analytics/indexing PoC<br>
+        * https://github.com/michaelcouck/scanner - network scanner in scala<br><br>
+
+        <b>Backup</b> is a parallel processing, grid based, reactive, auto discovery, no configuration, network backup application.<br><br>
 
         <b>Ikube</b> is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
         using statistical models and neural networks for analyses. Future ready for IoT when processing real-time analytics in
         extreme volumes becomes popular. Self organizing, auto network discovery, fully distributed and load balanced, models built
-        in parallel for larger<br><br><br>
-
-        models. And combined enterprise analytics/search out of the box.<br><br>
+        in parallel for larger models. And combined enterprise analytics/search out of the box.<br><br>
 
         <b>Serenity</b> is a code coverage plugin for Jenkins with dynamic byte code injection using ASM, including static analysis for
         the major code quality metrics, abstractness, efferent and afferent coupling, stability, complexity and distance from main.
         Integrated in the library is a production profiler. This will instrument only methods, and typically increases the cpu
-        consumption by about 3%. Note that it is not recommended for profiling transactional methods, as these methods will already
-        have been instrumented, and doing so again could have interesting side effects.<br><br>
+        consumption by about 3%.<br><br>
 
-        <b>The ikube client gui</b> is a search gui for the ikube server. It is however not a finished product, but it shows some of my Eclipse RCP work.
+        <b>The ikube client gui</b> is a search gui for the ikube server, PoC essentially. RPC being powerful, is expensive and complex to develop.
         <br><br>
 
         <b>i-discover</b> is a 10000/second/node real-time, grid based (distributed), linearly scalable, pluggable processing engine. Already
@@ -289,9 +291,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="content">
-                    Java certification, basics.
-                </td>
+                <td class="content">Java certification, basics.</td>
             </tr>
         </table>
         <table border="0">
@@ -312,9 +312,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="content">
-                    Java certification for general development, RMI, Swing, etc.
-                </td>
+                <td class="content">Java certification for general development, RMI, Swing, etc.</td>
             </tr>
         </table>
         <table border="0">
@@ -335,9 +333,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="content">
-                    Java certification for web development, JSP, Expression language, etc.
-                </td>
+                <td class="content">Java certification for web development, JSP, Expression language, etc.</td>
             </tr>
         </table>
         <table border="0">
@@ -358,9 +354,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="content">
-                    One year of informatics, finally switched to mathematics.
-                </td>
+                <td class="content">One year of informatics, finally switched to mathematics.</td>
             </tr>
         </table>
         <table border="0">
@@ -382,7 +376,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    Upgrade the mathematics for machine learning and analytics career direction. I opted for machine learning
+                    Upgrade the mathematics for machine learning and analytics career trajectory. I opted for machine learning
                     since this is not a niche market anymore but a mainstream one.
                 </td>
             </tr>
@@ -408,7 +402,7 @@
             </tr>
             <tr>
                 <td class="characteristics-header">Experience:</td>
-                <td>10++ years</td>
+                <td>15++ years</td>
             </tr>
             <tr>
                 <td class="characteristics-header">Availability:</td>
@@ -428,12 +422,8 @@
     <td class="header header-right">SKILLS</td>
 </tr>
 <tr>
-    <td class="thin-hr thin-hr-left">
-        <hr>
-    </td>
-    <td class="thin-hr">
-        <hr>
-    </td>
+    <td class="thin-hr thin-hr-left"><hr></td>
+    <td class="thin-hr"><hr></td>
 </tr>
 <tr>
     <td>
@@ -450,7 +440,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="company light-blue">Clear2Pay/FIS</td>
+                <td class="company light-blue">FIS(Clear2Pay)</td>
             </tr>
             <tr>
                 <td></td>
@@ -458,14 +448,14 @@
                 <td class="content">
                     Interacting with the client. Technical design and architecture of requirements, coaching, code review and quality
                     control. Monitoring the development team. Delivering custom software for banking payments software. Performance tweaking
-                    for the product. Third line support for issues.
+                    for the product. Third line support for production issues.
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Java EE, BPEL, WebSphere, Oracle, Jms, Linux, Gradle, SAML, JAAS
+                    Java EE, BPEL, WebSphere, Oracle, Jms, Linux, Gradle, SAML, JAAS, Gradle, Maven, Ant, WebLogic, MQ
                 </td>
             </tr>
         </table>
@@ -715,7 +705,6 @@
         </table>
     </td>
 </tr>
-
     <tr>
         <td>
             <table border="0">
@@ -736,9 +725,7 @@
                 <tr>
                     <td></td>
                     <td class="border-left"></td>
-                    <td class="content">
-                        General development on the logical ESB that simplifies the SOAP backends to JSON for clients.
-                    </td>
+                    <td class="content">General development on the logical ESB that simplifies the SOAP backends to JSON for clients.</td>
                 </tr>
                 <tr>
                     <td></td>
@@ -750,7 +737,6 @@
             </table>
         </td>
     </tr>
-
 <tr>
     <td>
         <table border="0">
