Moved logic to a common module for access from other projects.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -42,20 +42,6 @@
             vertical-align: top;
         }
 
-        td.detail {
-            padding-top: 4px;
-        }
-
-        td.detail-header {
-            text-align: right;
-        }
-
-        td.detail-content {
-            color: #aaaaaa;
-            text-align: left;
-            font-size: 13px;
-        }
-
         td.thick-hr {
             height: 2px;
             background-color: #000000;
@@ -132,8 +118,6 @@
 </head>
 <body>
 
-<!--<img src="../images/055.jpg" width="200px;" height="300px;" style="border: 1px solid #000000; float: right;">-->
-
 <table width="100%" border="0">
 <tr>
     <th align="left" width="75%">
@@ -144,7 +128,7 @@
         Phone: +32 (0) 493679684<br>
         Email: michael.couck@gmail.com<br>
         GitHub: https://github.com/michaelcouck<br>
-        Web: www.ikube.be/ikube/system/dash.html (guest/guest)
+        http://michaelcouck.wixsite.com/ikube - needs work ;)
     </th>
 </tr>
 <tr>
@@ -182,12 +166,12 @@
         Below are my main open source projects:<br><br>
 
         Live:<br>
-        * http://192.168.1.43:8081/backup-1.4-SNAPSHOT/login.html - (ask for login credentials)<br>
+        * http://ikube.be/backup-1.4-SNAPSHOT/login.html - (ask for login credentials)<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
         * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br><br>
 
         Source:<br>
-        * https://github.com/michaelcouck/backup - network backup, gui still in development<br>
+        * https://github.com/michaelcouck/backup - network backup, gui still in development, coming along...<br>
         * https://github.com/michaelcouck/ikube - analytics & search<br>
         * https://github.com/michaelcouck/serenity-plugin - code metrics/coverage<br>
         * https://github.com/michaelcouck/ikube-client - jface client PoC<br>
