--- a/code/site/src/main/webapp/ass/deploy.html
+++ b/code/site/src/main/webapp/ass/deploy.html
@@ -34,7 +34,7 @@ this takes only a few minutes.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-04-20 13:46:42 CEST
+Last updated 2016-04-20 13:46:42 +02:00
 </div>
 </div>
 </body>
