--- a/code/site/src/main/webapp/ass/install.html
+++ b/code/site/src/main/webapp/ass/install.html
@@ -72,7 +72,7 @@ or administrator/administrator. Please refer to the gui documentation for functi
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-04-20 13:46:42 CEST
+Last updated 2016-04-20 13:46:42 +02:00
 </div>
 </div>
 </body>
