--- a/code/site/src/main/webapp/ass/use-cases.html
+++ b/code/site/src/main/webapp/ass/use-cases.html
@@ -75,7 +75,7 @@ data in combinations.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-04-20 13:46:42 CEST
+Last updated 2016-04-20 13:46:42 +02:00
 </div>
 </div>
 </body>
